--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -5,7 +5,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f1f1f1;
+            background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
             margin: 0;
             padding: 20px;
         }
